# Data-Structure

./: CMakeLists.txt  Makefile  README.md  togit.sh
app/: CMakeLists.txt  main.c
data_structres/: CMakeLists.txt  Makefile  README.md  togit.sh
data_structres/app/: CMakeLists.txt  main.c
data_structres/examples/: CMakeLists.txt
data_structres/inc/: CMakeLists.txt  linkedLists.h  stack.h
data_structres/src/: CMakeLists.txt  linkedLists.c
examples/: stack_paranthesis_matching.c
inc/: CMakeLists.txt  colors.h  linkedLists.h  queue.h  stack.h  tree.h
src/: CMakeLists.txt  linkedLists.c  queue.c  stack.c  tree.c
